[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/ScreenAbout/screen_about.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/close_button.png" type="Texture" id=2]
[ext_resource path="res://scripts/Credits.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=4]

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 0 )
shadow_color = Color( 0.466667, 0.72549, 0.858824, 0.266667 )
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform float height = 30.0;
uniform float speed = 5.0;
uniform float frequency = 20.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/height = 30.0
shader_param/speed = 5.0
shader_param/frequency = 20.0

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[node name="Credits" type="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 243.0
margin_top = 137.0
margin_right = -243.0
margin_bottom = -144.0
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 400, 222 )
scale = Vector2( 0.530313, 0.4617 )
texture = ExtResource( 1 )

[node name="NamesRichTextLabel" type="RichTextLabel" parent="Background"]
margin_left = -649.0
margin_top = -299.0
margin_right = 669.0
margin_bottom = 424.0

[node name="Título" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 14 )
margin_left = -6.0
margin_top = 16.0
margin_right = 655.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.921569, 0.909804, 0.909804, 1 )
custom_fonts/font = SubResource( 1 )
text = "Desenvolvido por:"

[node name="Yan" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 4 )
margin_left = 663.693
margin_top = 500.545
margin_right = 1158.69
margin_bottom = 560.545
custom_colors/font_color = Color( 0.890196, 0.686275, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "Yan Coutinho"
__meta__ = {
"_edit_group_": true
}

[node name="YanLinkedin" type="Button" parent="Background/NamesRichTextLabel/Yan"]
margin_right = 538.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Rafela" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 6 )
margin_left = 664.868
margin_top = 373.745
margin_right = 1279.87
margin_bottom = 433.745
custom_colors/font_color = Color( 0.745098, 0.741176, 0.870588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Raphaela Ferraz"
__meta__ = {
"_edit_group_": true
}

[node name="RaphaLinkedin" type="Button" parent="Background/NamesRichTextLabel/Rafela"]
margin_left = -6.0
margin_top = -3.0
margin_right = 628.0
margin_bottom = 75.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Raissa" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 8 )
margin_left = 660.166
margin_top = 249.615
margin_right = 1197.17
margin_bottom = 309.615
custom_colors/font_color = Color( 0.890196, 0.686275, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "Raíssa Vieira"
__meta__ = {
"_edit_group_": true
}

[node name="RaissaLinkedin" type="Button" parent="Background/NamesRichTextLabel/Raissa"]
margin_left = -2.0
margin_top = -18.0
margin_right = 536.0
margin_bottom = 77.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Heitor" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 10 )
margin_left = -5.33051
margin_top = 301.166
margin_right = 530.669
margin_bottom = 361.166
custom_colors/font_color = Color( 0.890196, 0.686275, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "Heitor Elias "
__meta__ = {
"_edit_group_": true
}

[node name="HeitorLinkedin" type="Button" parent="Background/NamesRichTextLabel/Heitor"]
margin_left = -2.33057
margin_top = -5.52502
margin_right = 535.669
margin_bottom = 72.475
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Pedro" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 12 )
margin_left = 656.64
margin_top = 124.15
margin_right = 1150.64
margin_bottom = 184.15
custom_colors/font_color = Color( 0.745098, 0.741176, 0.870588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pedro Morita"
__meta__ = {
"_edit_group_": true
}

[node name="PedroLinkedin" type="Button" parent="Background/NamesRichTextLabel/Pedro"]
margin_left = -13.0
margin_top = -14.0
margin_right = 525.0
margin_bottom = 81.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Caio" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 14 )
margin_left = -6.0
margin_top = 123.0
margin_right = 531.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0.890196, 0.686275, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "Caio Teixeira"
__meta__ = {
"_edit_group_": true
}

[node name="CaioLinkedin" type="Button" parent="Background/NamesRichTextLabel/Caio"]
margin_left = 1.0
margin_top = -12.0
margin_right = 539.0
margin_bottom = 75.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="Henrique" type="Label" parent="Background/NamesRichTextLabel"]
material = SubResource( 16 )
margin_left = -3.0
margin_top = 504.0
margin_right = 490.0
margin_bottom = 552.0
custom_colors/font_color = Color( 0.745098, 0.741176, 0.870588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Henrique Cox"
__meta__ = {
"_edit_group_": true
}

[node name="HenriqueLinkedin" type="Button" parent="Background/NamesRichTextLabel/Henrique"]
margin_left = -2.0
margin_top = -12.0
margin_right = 536.0
margin_bottom = 83.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 24 )

[node name="BackButton" type="Button" parent="."]
margin_left = 725.0
margin_top = 12.0
margin_right = 795.0
margin_bottom = 87.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 2 )
flat = true

[connection signal="pressed" from="Background/NamesRichTextLabel/Yan/YanLinkedin" to="." method="_on_YanLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Rafela/RaphaLinkedin" to="." method="_on_RaphaLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Raissa/RaissaLinkedin" to="." method="_on_RaissaLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Heitor/HeitorLinkedin" to="." method="_on_HeitorLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Pedro/PedroLinkedin" to="." method="_on_PedroLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Caio/CaioLinkedin" to="." method="_on_CaioLinkedin_pressed"]
[connection signal="pressed" from="Background/NamesRichTextLabel/Henrique/HenriqueLinkedin" to="." method="_on_HenriqueLinkedin_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
